--- a/app/views/manager/planning/index.html.erb
+++ b/app/views/manager/planning/index.html.erb
@@ -7,7 +7,7 @@
       <li><a data-toggle='tab' href="#techniciens">Technicien 3</a></li>
     </ul>
     <div class='tab-content'>
-      <div id="vueGenerale" class="tab-pane fade in active planning">
+      <div id="vueGenerale"  role="tabpanel"  class="tab-pane fade in active planning">
         <table class='table tableAvailabilities'>
           <thead>
             <tr>
@@ -39,7 +39,7 @@
         </table>
 
       </div>
-      <div id="techniciens" class="tab-pane fade in">
+      <div id="techniciens"  role="tabpanel"  class="tab-pane fade in">
         <h3>Technicien</h3>
       </div>
     </div>
