Add trace statement.

--- a/app/views/manager/bookings/new.html.erb
+++ b/app/views/manager/bookings/new.html.erb
@@ -2,6 +2,7 @@
   <div class='text-center'>
     <h1>Créer une réservation</h1>
   </div>
+  <%= @booking.errors.inspect %>
   <%= simple_form_for [:manager, @booking] do |f| %>
     <div class='row'>
       <div class='col-md-6'>
