--- a/app/views/manager/planning/show.html.erb
+++ b/app/views/manager/planning/show.html.erb
@@ -2,7 +2,7 @@
   <div class='container'>
     <ul class="nav nav-tabs" data-controller='planning'>
       <li>
-          <%= link_to 'Vue générale', manager_planning_path %>
+        <%= link_to 'Vue générale', manager_planning_path %>
       </li>
       <% current_manager.technicians.each do |tech| %>
         <li class="<%= tech.id.eql?(@tech.id) ? 'active' : '' %>">
@@ -10,5 +10,38 @@
         </li>
       <% end %>
     </ul>
+    <table class='table tableAvailabilities'>
+      <% if @headers %>
+        <thead>
+          <tr>
+            <th></th>
+            <% @headers.each do |date| %>
+              <th><%= l date, format: :long %></th>
+            <% end %>
+          </tr>
+        </thead>
+      <% end %>
+      <tbody>
+        <% @availabilities.each do |days| %>
+          <tr>
+            <% days.each do |item| %>
+              <% if item.booking %>
+                <td class='danger'> <%= item.booking.company.name %> </td>
+              <% else %>
+                <td> <%= check_box_tag 'booking[availability_ids][]', item.id, false %> </td>
+              <% end %>
+            <% end %>
+          </tr>
+        <% end %>
+        <% if @availabilities.length.zero? %>
+          <tr>
+            <td>
+              <div class='alert alert-info'>Vous n'avez pas d'availabilities pour cette semaine.</div>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
   </div>
 </div>
+
