Better formatting of dates in table heading.

--- a/app/views/manager/planning/show.html.erb
+++ b/app/views/manager/planning/show.html.erb
@@ -22,7 +22,7 @@
         <thead>
           <tr>
             <% @headers.each do |date| %>
-              <th><%= l date, format: :long %></th>
+              <th><%= l date, format: '%a %d %b %Y' %></th>
             <% end %>
           </tr>
         </thead>
