Use a light gray for table availability headers.

--- a/app/assets/stylesheets/components/_table_availability.scss
+++ b/app/assets/stylesheets/components/_table_availability.scss
@@ -5,6 +5,10 @@
     border: 1px solid #ccc;
   }
 
+  th {
+    color: #9f9f9f !important;
+  }
+
   td {
     text-align: right;
     background-color: white;
