Add link to technician planning in planning index.

--- a/app/views/manager/planning/index.html.erb
+++ b/app/views/manager/planning/index.html.erb
@@ -31,7 +31,9 @@
                 <tr>
                   <% day_items.each_with_index do |item, item_index| %>
                     <% if day_item_index.even? && item_index.zero? %>
-                      <td rowspan='2' class='tech'><%= item.name %></td>
+                      <td rowspan='2' class='tech'>
+                        <%= link_to item.name, manager_technician_planning_path(item.id) %>
+                      </td>
                     <% else %>
                       <% if item.booking %>
                         <td class='danger'> <%= item.booking.company.name %> </td>
