--- a/app/views/manager/planning/index.html.erb
+++ b/app/views/manager/planning/index.html.erb
@@ -1,83 +1,85 @@
-<div class="padding-box" data-controller='planning'>
-  <div class='container'>
-    <ul class="nav nav-tabs">
-      <li class="active"><a data-toggle='tab' href="#vueGenerale">Vue générale</a></li>
-      <% current_manager.technicians.each do |tech| %>
-        <li><%= link_to tech.name, manager_technician_planning_path(tech.id) %></li>
-      <% end %>
-      <li class="pull-right hide" data-target='planning.menu'>
-        <div class="dropdown open" data-target='planning.dropdown'>
-          <a href='#!' class="btn btn-default dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-            Modifier
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-            <li><a href="#">Congés</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Formation</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a href="#">Indisponible</a></li>
-          </ul>
-      </li>
-    </ul>
-    <div class='tab-content'>
-      <div id="vueGenerale"  role="tabpanel"  class="tab-pane fade in active planning">
-        <div class="text-center">
-          <ul class='pagination'>
-            <li> <%= link_to 'précédent', manager_planning_url(date: @next_date - 2.weeks) %> </li>
-            <li> <%= link_to 'suivant',   manager_planning_url(date: @next_date) %> </li>
-          </ul>
-        </div>
-        <table class='table tableAvailabilities'>
-          <% if @headers %>
-            <thead>
-              <tr>
-                <th></th>
-                <% @headers.each do |date| %>
-                  <th><%= l date, format: :long %></th>
-                <% end %>
-              </tr>
-            </thead>
-          <% end %>
-          <tbody>
-            <% @availabilities.each do |days| %>
-              <% days.each_with_index do |day_items, day_item_index| %>
-                <tr>
-                  <% day_items.each_with_index do |item, item_index| %>
-                    <% if day_item_index.even? && item_index.zero? %>
-                      <td rowspan='2' class='tech'>
-                        <%= link_to item.name, manager_technician_planning_path(item.id) %>
-                      </td>
-                    <% else %>
-                      <% if item.booking %>
-                        <td class='danger'> <%= item.booking.company.name %> </td>
-                      <% else %>
-                        <% opts = { data: {action: 'planning#select'} } %>
-                        <td> <%= check_box_tag 'booking[availability_ids][]', item.id, false, opts %> </td>
-                      <% end %>
+<form method='PUT' url='#' data-controller='planning' data-target='planning.form'>
+  <div class="padding-box">
+    <div class='container'>
+      <ul class="nav nav-tabs">
+        <li class="active"><a data-toggle='tab' href="#vueGenerale">Vue générale</a></li>
+        <% current_manager.technicians.each do |tech| %>
+          <li><%= link_to tech.name, manager_technician_planning_path(tech.id) %></li>
+        <% end %>
+        <li class="pull-right hide" data-target='planning.menu'>
+          <div class="dropdown open" data-target='planning.dropdown'>
+            <a href='#!' class="btn btn-default dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+              Modifier
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+              <li><a href="#">Congés</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">Formation</a></li>
+              <li role="separator" class="divider"></li>
+              <li><a href="#">Indisponible</a></li>
+            </ul>
+          </li>
+        </ul>
+        <div class='tab-content'>
+          <div id="vueGenerale"  role="tabpanel"  class="tab-pane fade in active planning">
+            <div class="text-center">
+              <ul class='pagination'>
+                <li> <%= link_to 'précédent', manager_planning_url(date: @next_date - 2.weeks) %> </li>
+                <li> <%= link_to 'suivant',   manager_planning_url(date: @next_date) %> </li>
+              </ul>
+            </div>
+            <table class='table tableAvailabilities'>
+              <% if @headers %>
+                <thead>
+                  <tr>
+                    <th></th>
+                    <% @headers.each do |date| %>
+                      <th><%= l date, format: :long %></th>
                     <% end %>
-                  <% end %>
-                </tr>
+                  </tr>
+                </thead>
               <% end %>
-            <% end %>
-            <% if @availabilities.length.zero? %>
-              <tr>
-                <td>
-                  <div class='alert alert-info'>Vous n'avez pas d'availabilities pour cette semaine.</div>
-                </td>
-              </tr>
-            <% end %>
-          </tbody>
-        </table>
-        <div class="text-center">
-          <ul class='pagination'>
-            <li> <%= link_to 'précédent', manager_planning_url(date: @next_date - 2.weeks) %> </li>
-            <li> <%= link_to 'suivant',   manager_planning_url(date: @next_date) %> </li>
-          </ul>
+              <tbody>
+                <% @availabilities.each do |days| %>
+                  <% days.each_with_index do |day_items, day_item_index| %>
+                    <tr>
+                      <% day_items.each_with_index do |item, item_index| %>
+                        <% if day_item_index.even? && item_index.zero? %>
+                          <td rowspan='2' class='tech'>
+                            <%= link_to item.name, manager_technician_planning_path(item.id) %>
+                          </td>
+                        <% else %>
+                          <% if item.booking %>
+                            <td class='danger'> <%= item.booking.company.name %> </td>
+                          <% else %>
+                            <% opts = { data: {action: 'planning#select'} } %>
+                            <td> <%= check_box_tag 'booking[availability_ids][]', item.id, false, opts %> </td>
+                          <% end %>
+                        <% end %>
+                      <% end %>
+                    </tr>
+                  <% end %>
+                <% end %>
+                <% if @availabilities.length.zero? %>
+                  <tr>
+                    <td>
+                      <div class='alert alert-info'>Vous n'avez pas d'availabilities pour cette semaine.</div>
+                    </td>
+                  </tr>
+                <% end %>
+              </tbody>
+            </table>
+            <div class="text-center">
+              <ul class='pagination'>
+                <li> <%= link_to 'précédent', manager_planning_url(date: @next_date - 2.weeks) %> </li>
+                <li> <%= link_to 'suivant',   manager_planning_url(date: @next_date) %> </li>
+              </ul>
+            </div>
+          </div>
+          <div id="techniciens"  role="tabpanel"  class="tab-pane fade in">
+            <h3>Technicien</h3>
+          </div>
         </div>
-      </div>
-      <div id="techniciens"  role="tabpanel"  class="tab-pane fade in">
-        <h3>Technicien</h3>
       </div>
     </div>
-  </div>
-</div>
+  </form>
