Remove css class.

--- a/app/views/manager/planning/index.html.erb
+++ b/app/views/manager/planning/index.html.erb
@@ -9,7 +9,7 @@
         <% end %>
         <li class="pull-right hide" data-target='planning.menu'>
           <div class="dropdown open" data-target='planning.dropdown'>
-            <a href='#!' class="btn btn-default dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+            <a href='#!' class="btn dropdown-toggle" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
               Modifier
             </a>
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
