Add more data urls.

--- a/app/views/manager/planning/index.html.erb
+++ b/app/views/manager/planning/index.html.erb
@@ -15,9 +15,9 @@
             <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
               <li><a href="#" data-action='planning#statuer' data-target='planning.conges-btn' data-url='<%= vacation_manager_availabilities_path %>'>Congés</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#" data-action='planning#statuer'data-url='<%= training_manager_availabilities_path %>'>Formation</a></li>
+              <li><a href="#" data-action='planning#statuer' data-url='<%= training_manager_availabilities_path %>'>Formation</a></li>
               <li role="separator" class="divider"></li>
-              <li><a href="#" data-action='planning#statuer'>Indisponible</a></li>
+              <li><a href="#" data-action='planning#statuer' data-url='<%= unavailable_manager_availabilities_path %>'>Indisponible</a></li>
             </ul>
           </li>
         </ul>
