--- a/app/views/manager/planning/index.html.erb
+++ b/app/views/manager/planning/index.html.erb
@@ -56,6 +56,8 @@
                             <td class='danger'>en vacances </td>
                           <% elsif item.training? %>
                             <td class='danger'>en formation</td>
+                          <% elsif item.unavailable? %>
+                            <td class='danger'>indisponible</td>
                           <% else %>
                             <% opts = { data: {action: 'planning#select'} } %>
                             <td> <%= check_box_tag 'availability[ids][]', item.id, false, opts %> </td>
